# dice-probability

./: LICENSE  README.md  dice-probability.cabal  stack.yaml
src/: Main.hs
