name:                dice-probability
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/martin-kolinek/dice-probability#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Kolinek
maintainer:          value
copyright:           2017 Martin Kolinek
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dice-probability
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       probability,
                       lens,
                       semigroups,
                       ListZipper,
                       megaparsec
